src/command_modules/azure-cli-network/azure/cli/command_modules/network/tests/latest/recordings/test_network_extended_nsg.yaml
interactions:
- request:
    body: '{"location": "westus", "tags": {"product": "azurecli", "cause": "automation",
      "date": "2018-11-30T22:51:02Z"}}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [group create]
      Connection: [keep-alive]
      Content-Length: ['110']
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--location --name --tag]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          resourcemanagementclient/2.0.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2018-05-01
  response:
    body: {string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2018-11-30T22:51:02Z"},"properties":{"provisioningState":"Succeeded"}}'}
    headers:
      cache-control: [no-cache]
      content-length: ['384']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:08 GMT']
      expires: ['-1']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-content-type-options: [nosniff]
      x-ms-ratelimit-remaining-subscription-writes: ['1198']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--name -g]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          resourcemanagementclient/2.0.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2018-05-01
  response:
    body: {string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001","name":"cli_test_extended_nsg000001","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2018-11-30T22:51:02Z"},"properties":{"provisioningState":"Succeeded"}}'}
    headers:
      cache-control: [no-cache]
      content-length: ['384']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:11 GMT']
      expires: ['-1']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: '{"location": "westus"}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      Content-Length: ['22']
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--name -g]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Updating\",\r\n    \"resourceGuid\":
        \"bbd19122-cd85-4f83-8444-57da62d87df7\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"7286031b-73c5-4ea0-a640-7ba055da0920\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Updating\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/ce84452f-21c9-47e5-bab7-c0b5cf94b9a2?api-version=2018-10-01']
      cache-control: [no-cache]
      content-length: ['6925']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:13 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-content-type-options: [nosniff]
      x-ms-ratelimit-remaining-subscription-writes: ['1197']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      ParameterSetName: [--name -g]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/ce84452f-21c9-47e5-bab7-c0b5cf94b9a2?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:23 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg create]
      Connection: [keep-alive]
      ParameterSetName: [--name -g]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"nsg1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1\",\r\n
        \ \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups\",\r\n  \"location\": \"westus\",\r\n
        \ \"properties\": {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"resourceGuid\":
        \"bbd19122-cd85-4f83-8444-57da62d87df7\",\r\n    \"securityRules\": [],\r\n
        \   \"defaultSecurityRules\": [\r\n      {\r\n        \"name\": \"AllowVnetInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetInBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from all VMs in VNET\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowAzureLoadBalancerInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowAzureLoadBalancerInBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow inbound traffic from azure load balancer\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"AzureLoadBalancer\",\r\n          \"destinationAddressPrefix\": \"*\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\":
        \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllInBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllInBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all inbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Inbound\",\r\n          \"sourcePortRanges\": [],\r\n
        \         \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      },\r\n
        \     {\r\n        \"name\": \"AllowVnetOutBound\",\r\n        \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowVnetOutBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to all VMs
        in VNET\",\r\n          \"protocol\": \"*\",\r\n          \"sourcePortRange\":
        \"*\",\r\n          \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"VirtualNetwork\",\r\n          \"destinationAddressPrefix\": \"VirtualNetwork\",\r\n
        \         \"access\": \"Allow\",\r\n          \"priority\": 65000,\r\n          \"direction\":
        \"Outbound\",\r\n          \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"AllowInternetOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/AllowInternetOutBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Allow outbound traffic from all VMs to Internet\",\r\n
        \         \"protocol\": \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n
        \         \"destinationPortRange\": \"*\",\r\n          \"sourceAddressPrefix\":
        \"*\",\r\n          \"destinationAddressPrefix\": \"Internet\",\r\n          \"access\":
        \"Allow\",\r\n          \"priority\": 65001,\r\n          \"direction\": \"Outbound\",\r\n
        \         \"sourcePortRanges\": [],\r\n          \"destinationPortRanges\":
        [],\r\n          \"sourceAddressPrefixes\": [],\r\n          \"destinationAddressPrefixes\":
        []\r\n        }\r\n      },\r\n      {\r\n        \"name\": \"DenyAllOutBound\",\r\n
        \       \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/defaultSecurityRules/DenyAllOutBound\",\r\n
        \       \"etag\": \"W/\\\"3d365ae5-ea7b-447e-8ada-708d1635beee\\\"\",\r\n
        \       \"type\": \"Microsoft.Network/networkSecurityGroups/defaultSecurityRules\",\r\n
        \       \"properties\": {\r\n          \"provisioningState\": \"Succeeded\",\r\n
        \         \"description\": \"Deny all outbound traffic\",\r\n          \"protocol\":
        \"*\",\r\n          \"sourcePortRange\": \"*\",\r\n          \"destinationPortRange\":
        \"*\",\r\n          \"sourceAddressPrefix\": \"*\",\r\n          \"destinationAddressPrefix\":
        \"*\",\r\n          \"access\": \"Deny\",\r\n          \"priority\": 65500,\r\n
        \         \"direction\": \"Outbound\",\r\n          \"sourcePortRanges\":
        [],\r\n          \"destinationPortRanges\": [],\r\n          \"sourceAddressPrefixes\":
        [],\r\n          \"destinationAddressPrefixes\": []\r\n        }\r\n      }\r\n
        \   ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['6932']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:24 GMT']
      etag: [W/"3d365ae5-ea7b-447e-8ada-708d1635beee"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: '{"properties": {"protocol": "*", "destinationPortRange": "4444", "sourceAddressPrefix":
      "*", "destinationAddressPrefix": "", "destinationAddressPrefixes": ["10.0.0.0/24",
      "11.0.0.0/24"], "sourcePortRanges": ["700-900", "1000-1100"], "access": "Allow",
      "priority": 1000, "direction": "Inbound"}, "name": "rule1"}'
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      Content-Length: ['311']
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--access --destination-address-prefixes --direction --nsg-name
          --protocol -g --source-address-prefix -n --source-port-range --destination-port-range
          --priority]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"b6ffdda8-d252-4cda-a8e1-61aec2ec9a7c\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"Allow\",\r\n
        \   \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n    \"sourcePortRanges\":
        [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n    ],\r\n    \"destinationPortRanges\":
        [],\r\n    \"sourceAddressPrefixes\": [],\r\n    \"destinationAddressPrefixes\":
        [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/bdb22ef8-e975-4a28-a67c-7ed7c768a140?api-version=2018-10-01']
      cache-control: [no-cache]
      content-length: ['873']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:26 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-content-type-options: [nosniff]
      x-ms-ratelimit-remaining-subscription-writes: ['1193']
    status: {code: 201, message: Created}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      ParameterSetName: [--access --destination-address-prefixes --direction --nsg-name
          --protocol -g --source-address-prefix -n --source-port-range --destination-port-range
          --priority]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/bdb22ef8-e975-4a28-a67c-7ed7c768a140?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:37 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule create]
      Connection: [keep-alive]
      ParameterSetName: [--access --destination-address-prefixes --direction --nsg-name
          --protocol -g --source-address-prefix -n --source-port-range --destination-port-range
          --priority]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"2c2746ae-0bfa-4a5a-9a16-2e0671fdd3c8\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"Allow\",\r\n
        \   \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n    \"sourcePortRanges\":
        [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n    ],\r\n    \"destinationPortRanges\":
        [],\r\n    \"sourceAddressPrefixes\": [],\r\n    \"destinationAddressPrefixes\":
        [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['874']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:37 GMT']
      etag: [W/"2c2746ae-0bfa-4a5a-9a16-2e0671fdd3c8"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      ParameterSetName: [--destination-address-prefixes --nsg-name -g --source-address-prefix
          -n --source-port-range --destination-port-range]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"2c2746ae-0bfa-4a5a-9a16-2e0671fdd3c8\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"destinationPortRange\": \"4444\",\r\n    \"sourceAddressPrefix\": \"*\",\r\n
        \   \"destinationAddressPrefix\": \"\",\r\n    \"access\": \"Allow\",\r\n
        \   \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n    \"sourcePortRanges\":
        [\r\n      \"700-900\",\r\n      \"1000-1100\"\r\n    ],\r\n    \"destinationPortRanges\":
        [],\r\n    \"sourceAddressPrefixes\": [],\r\n    \"destinationAddressPrefixes\":
        [\r\n      \"10.0.0.0/24\",\r\n      \"11.0.0.0/24\"\r\n    ]\r\n  }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['874']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:38 GMT']
      etag: [W/"2c2746ae-0bfa-4a5a-9a16-2e0671fdd3c8"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: 'b''{"id": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1",
      "properties": {"protocol": "*", "sourcePortRange": "*", "sourceAddressPrefix":
      "", "sourceAddressPrefixes": ["10.0.0.0/24", "11.0.0.0/24"], "destinationAddressPrefix":
      "Internet", "destinationPortRanges": ["500-1000", "2000", "3000"], "access":
      "Allow", "priority": 1000, "direction": "Inbound", "provisioningState": "Succeeded"},
      "name": "rule1", "etag": "W/\\"2c2746ae-0bfa-4a5a-9a16-2e0671fdd3c8\\""}'''
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      Content-Length: ['629']
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--destination-address-prefixes --nsg-name -g --source-address-prefix
          -n --source-port-range --destination-port-range]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: PUT
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"31445fa2-fe0f-4995-8af8-793b0048f391\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Updating\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"sourceAddressPrefix\": \"\",\r\n
        \   \"destinationAddressPrefix\": \"Internet\",\r\n    \"access\": \"Allow\",\r\n
        \   \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n    \"sourcePortRanges\":
        [],\r\n    \"destinationPortRanges\": [\r\n      \"500-1000\",\r\n      \"2000\",\r\n
        \     \"3000\"\r\n    ],\r\n    \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ],\r\n    \"destinationAddressPrefixes\": []\r\n
        \ }\r\n}"}
    headers:
      azure-asyncoperation: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/91a71645-8c48-4000-a411-8ed2cfa130c6?api-version=2018-10-01']
      cache-control: [no-cache]
      content-length: ['883']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:38 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
      x-ms-ratelimit-remaining-subscription-writes: ['1198']
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      ParameterSetName: [--destination-address-prefixes --nsg-name -g --source-address-prefix
          -n --source-port-range --destination-port-range]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Network/locations/westus/operations/91a71645-8c48-4000-a411-8ed2cfa130c6?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"status\": \"Succeeded\"\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['29']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:49 GMT']
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [network nsg rule update]
      Connection: [keep-alive]
      ParameterSetName: [--destination-address-prefixes --nsg-name -g --source-address-prefix
          -n --source-port-range --destination-port-range]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          networkmanagementclient/2.4.0 Azure-SDK-For-Python AZURECLI/2.0.52]
    method: GET
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1?api-version=2018-10-01
  response:
    body: {string: "{\r\n  \"name\": \"rule1\",\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_extended_nsg000001/providers/Microsoft.Network/networkSecurityGroups/nsg1/securityRules/rule1\",\r\n
        \ \"etag\": \"W/\\\"8cf92dcb-c775-466f-8c0e-c44108812c60\\\"\",\r\n  \"type\":
        \"Microsoft.Network/networkSecurityGroups/securityRules\",\r\n  \"properties\":
        {\r\n    \"provisioningState\": \"Succeeded\",\r\n    \"protocol\": \"*\",\r\n
        \   \"sourcePortRange\": \"*\",\r\n    \"sourceAddressPrefix\": \"\",\r\n
        \   \"destinationAddressPrefix\": \"Internet\",\r\n    \"access\": \"Allow\",\r\n
        \   \"priority\": 1000,\r\n    \"direction\": \"Inbound\",\r\n    \"sourcePortRanges\":
        [],\r\n    \"destinationPortRanges\": [\r\n      \"500-1000\",\r\n      \"2000\",\r\n
        \     \"3000\"\r\n    ],\r\n    \"sourceAddressPrefixes\": [\r\n      \"10.0.0.0/24\",\r\n
        \     \"11.0.0.0/24\"\r\n    ],\r\n    \"destinationAddressPrefixes\": []\r\n
        \ }\r\n}"}
    headers:
      cache-control: [no-cache]
      content-length: ['884']
      content-type: [application/json; charset=utf-8]
      date: ['Fri, 30 Nov 2018 22:51:50 GMT']
      etag: [W/"8cf92dcb-c775-466f-8c0e-c44108812c60"]
      expires: ['-1']
      pragma: [no-cache]
      server: [Microsoft-HTTPAPI/2.0, Microsoft-HTTPAPI/2.0]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      transfer-encoding: [chunked]
      vary: [Accept-Encoding]
      x-content-type-options: [nosniff]
    status: {code: 200, message: OK}
- request:
    body: null
    headers:
      Accept: [application/json]
      Accept-Encoding: ['gzip, deflate']
      CommandName: [group delete]
      Connection: [keep-alive]
      Content-Length: ['0']
      Content-Type: [application/json; charset=utf-8]
      ParameterSetName: [--name --yes --no-wait]
      User-Agent: [python/3.6.1 (Windows-10-10.0.17763-SP0) msrest/0.6.2 msrest_azure/0.5.1
          resourcemanagementclient/2.0.0 Azure-SDK-For-Python AZURECLI/2.0.52]
      accept-language: [en-US]
    method: DELETE
    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_extended_nsg000001?api-version=2018-05-01
  response:
    body: {string: ''}
    headers:
      cache-control: [no-cache]
      content-length: ['0']
      date: ['Fri, 30 Nov 2018 22:52:02 GMT']
      expires: ['-1']
      location: ['https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/operationresults/eyJqb2JJZCI6IlJFU09VUkNFR1JPVVBERUxFVElPTkpPQi1DTEk6NUZURVNUOjVGRVhURU5ERUQ6NUZOU0cySjJKUkRXM1pRVUVMVEFWM1VYWXw3QzQ1NjVBRDlGRjg5QTMzLVdFU1RVUyIsImpvYkxvY2F0aW9uIjoid2VzdHVzIn0?api-version=2018-05-01']
      pragma: [no-cache]
      strict-transport-security: [max-age=31536000; includeSubDomains]
      x-content-type-options: [nosniff]
      x-ms-ratelimit-remaining-subscription-deletes: ['14998']
    status: {code: 202, message: Accepted}
version: 1
